--- a/index.html
+++ b/index.html
@@ -10,20 +10,22 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../GifLibrary/assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan" rel="stylesheet">
+    <link href="../GifLibrary/assets/images/favicon.ico" rel="icon" type="image/x-icon" />
     <title>Gif Library</title>
 </head>
 
 <body>
-    <div class="jumbotron text-center">
+    <div class="jumbotron text-center" id="title">
         <h1>GIF Library</h1>
     </div>
     <div class="container"></div>
     <div id="buttons-view"></div>
     <form id="gif-form">
-        <label for="gif-input">Add a GIF category!</label>
+        <label for="gif-input" id="addgiftext">Add a GIF category!</label>
         <input type="text" id="gif-input"><br>
         <!-- Button triggers new gif to be added -->
-        <input id="add-gif" type="submit" value="Add a GIF category!">
+        <input id="add-gif" class="btn btn-outline-success" type="submit" value="Add a GIF category!">
     </form>
     
     <div id="gifs-appear-here"></div>
