--- a/index.html
+++ b/index.html
@@ -22,12 +22,16 @@
     <div class="container"></div>
     <div id="buttons-view"></div>
     <form id="gif-form">
-        <label for="gif-input" id="addgiftext">Add a GIF category!</label>
+        <label for="gif-input" class="addgiftext">Add a GIF category!</label>
         <input type="text" id="gif-input"><br>
         <!-- Button triggers new gif to be added -->
         <input id="add-gif" class="btn btn-outline-success" type="submit" value="Add a GIF category!">
     </form>
-    
+    <div class="row">
+        <div class="col-12">
+            <h3 class="text-center addgiftext">Click on the GIF for it to play!</h3>
+        </div>
+    </div>
     <div id="gifs-appear-here"></div>
 
 
