--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="jumbotron text-center" id="title">
         <h1>GIF Library</h1>
     </div>
-    <div class="container"></div>
+<div class="container">
     <div id="buttons-view"></div>
     <form id="gif-form">
         <label for="gif-input" class="addgiftext">Add a GIF category!</label>
@@ -32,7 +32,8 @@
             <h3 class="text-center addgiftext">Click on the GIF for it to play!</h3>
         </div>
     </div>
-    <div id="gifs-appear-here"></div>
+</div>
+    <div class="container" id="gifs-appear-here"></div>
 
 
     <!-- Optional JavaScript -->
